--- a/README
+++ b/README
@@ -16,18 +16,20 @@ article_dump.json
 
 Step:-1
 Change project config file...
-change infoassembly.test.common.info.java as per your requirement
+change Info.java(package infoassembly.test.common) as per your requirement
 
 Step 2:-
 run Server....
-run infoassembly.test.server.Server.java
+run Server.java(package infoassembly.test.server)
+(run server in only one system one time)
 
 Step 3:-
 run worker...
-run infoassembly.test.worker.GearmanWorker.java in all system where you want distribute your work.
+run GearmanWorker.java(package infoassembly.test.worker) in all system where you want distribute your work.
 
 Step 4:-
 run client...
-run infoassembly.test.client.Client.java.
+run Client.java(package infoassembly.test.client).
+(run client in only one system and run it one time)
 
 each thread mantain it own time.
